--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-splashdown
+<!DOCTYPE html>
+<!--[if IE 8]>  <html class="no-js lt-ie9" lang="en" > <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en" > <!--<![endif]-->
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Bitwav</title>
+    <style>
+      body { background-color: #000; }
+      .absolute-center { margin: auto; position: absolute; top: 0; left: 0; bottom: 0; right: 0; }
+      .splash { height: 122px; width: 729px; }
+      .splash img { margin-top: -61px; }
+    </style>
+  </head>
+  <body>
+    <div class="splash absolute-center">
+      <img src="./img/bitwav.png" alt="Bitwav" title="Bitwav" />
+    </div>
+  </body>
+</html>
+
+
+    
+
